deixando mais responsivo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header> 
-        <h1>Formulário de pesquisa freeCodeCamp</h1>
+        <h1>Formulário de pesquisa nook systems</h1>
         <P class="p">Obrigado por ter tempo para nos ajudar a melhorar a plataforma</P>
     </header>
 
@@ -38,18 +38,18 @@
         </div>
 
         <div class="margem">
-            <p class="margem-texto">Qual opção melhor descreve seu papel atual?</p>
+            <p class="margem-texto">Qual melhor opçao descreve seu papel atual?</p>
             <select class="tamanho" name="" id="" required>
                 <option disabled selected value="">selecionar</option>
                 <option value="o">Estudante</option>
-                <option value="o">full time job</option>
-                <option value="o">other</option>
-                <option value="o">full time leaner</option>
+                <option value="o">Trabalhando</option>
+                <option value="o">trabalhando e estudando</option>
+                <option value="o">aposentado</option>
             </select>
         </div>
 
         <div class="margem"> 
-            <p class="margem-texto">Você recomendaria freeCodeCamp <br> para um amigo?</p>
+            <p class="margem-texto">Você recomendaria o nosso trabalho <br> para um amigo?</p>
             <label class="form"  for="claro"><input id="claro" class="caixinha" name="1" type="radio">claro</label>
             <label class="form"  for="talvez"><input id="talvez" class="caixinha" name="1" type="radio">Talvez</label>
             <label class="form"  for="nao"><input id="nao" class="caixinha" name="1" type="radio">Nao tenho certeza</label>   
@@ -60,9 +60,9 @@
             <select class="tamanho" name="" id="" required>
                 <option disabled selected value="">selecionar</option>
                 <option  value="o">Estudante</option>
-                <option value="o">full time job</option>
-                <option value="o">other</option>
-                <option value="o">full time leaner</option>
+                <option value="o">trabalhador</option>
+                <option value="o">aposentado</option>
+                <option value="o">empresario</option>
             </select>
         </div>
         <p class="margem-texto">O que você gostaria de ver melhorado? (Verifique tudo o que se aplica)</p>
